@@ -116,6 +116,8 @@ function exportSvnAndPackage()
     rm -f $PROJECT_NAME/etc/generatePackage.php
     rm -f $PROJECT_NAME/etc/phpDocWeb.ini
     rm -f $PROJECT_NAME/etc/release.sh
+    rm -rf $PROJECT_NAME-$RELEASE_NAME/modules/wizardexample
+    rm -rf $PROJECT_NAME-$RELEASE_NAME/www/themes/default/wizardexample
 #    rm -rf $PROJECT_NAME/lib/SGL/tests
 #    rm -rf $PROJECT_NAME/modules/user/tests
 
@@ -208,8 +210,6 @@ function buildMinimalPearPackage()
 {
     # remove unwanted files
     rm -rf $PROJECT_NAME-$RELEASE_NAME/CHANGELOG-1.txt.gz
-    rm -rf $PROJECT_NAME-$RELEASE_NAME/modules/wizardexample
-    rm -rf $PROJECT_NAME-$RELEASE_NAME/www/themes/default/wizardexample
     rm -rf $PROJECT_NAME-$RELEASE_NAME/lib/SGL/tests
     rm -rf $PROJECT_NAME-$RELEASE_NAME/modules/user/tests
     rm -rf $PROJECT_NAME-$RELEASE_NAME/package.xml
@@ -225,8 +225,14 @@ function buildMinimalPearPackage()
     rm -rf $PROJECT_NAME-$RELEASE_NAME/modules/guestbook
     rm -rf $PROJECT_NAME-$RELEASE_NAME/modules/messaging
     rm -rf $PROJECT_NAME-$RELEASE_NAME/modules/newsletter
-    #rm -rf $PROJECT_NAME-$RELEASE_NAME/modules/publisher
+    rm -rf $PROJECT_NAME-$RELEASE_NAME/modules/publisher
     rm -rf $PROJECT_NAME-$RELEASE_NAME/modules/randommsg
+
+
+    rm -rf $PROJECT_NAME-$RELEASE_NAME/modules/blog
+    rm -rf $PROJECT_NAME-$RELEASE_NAME/modules/gallery2
+    rm -rf $PROJECT_NAME-$RELEASE_NAME/modules/wizardexample
+
 
     #and their templates
     rm -rf $PROJECT_NAME-$RELEASE_NAME/www/themes/default/block
@@ -237,8 +243,16 @@ function buildMinimalPearPackage()
     rm -rf $PROJECT_NAME-$RELEASE_NAME/www/themes/default/guestbook
     rm -rf $PROJECT_NAME-$RELEASE_NAME/www/themes/default/messaging
     rm -rf $PROJECT_NAME-$RELEASE_NAME/www/themes/default/newsletter
-    #rm -rf $PROJECT_NAME-$RELEASE_NAME/www/themes/default/publisher
+    rm -rf $PROJECT_NAME-$RELEASE_NAME/www/themes/default/publisher
     rm -rf $PROJECT_NAME-$RELEASE_NAME/www/themes/default/randommsg
+
+    rm -rf $PROJECT_NAME-$RELEASE_NAME/www/themes/default/blog
+    rm -rf $PROJECT_NAME-$RELEASE_NAME/www/themes/default/publisher
+    rm -rf $PROJECT_NAME-$RELEASE_NAME/www/themes/default/gallery2
+    rm -rf $PROJECT_NAME-$RELEASE_NAME/www/themes/default/wizardexample
+
+    rm -rf $PROJECT_NAME-$RELEASE_NAME/www/themes/savant
+    rm -rf $PROJECT_NAME-$RELEASE_NAME/www/themes/smarty
 
     # copy PEAR overrides into root
     cp $PROJECT_NAME-$RELEASE_NAME/lib/pear/HTML/Tree.php $PROJECT_NAME-$RELEASE_NAME/
@@ -271,14 +285,14 @@ function buildMinimalPearPackage()
 
 checkArgs
 
-checkPreviousVersions
+#checkPreviousVersions
 
 #tagRelease
 
 # move to tmp dir
 cd /tmp
 
-exportSvnAndPackage
+#exportSvnAndPackage
 
 #uploadToSfWholePackage
 
